Mehrsprachigkeit: Spanisch und Französisch ergänzt, Sprachumschalter verbessert (Dropdown, Klick, Sichtbarkeit), Header zentralisiert

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,67 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  hello: "Hello World"
+  navigation:
+    home: "Home"
+    features: "Features"
+    pricing: "Pricing"
+    faq: "FAQ"
+  general:
+    back_to_overview: "Back to project overview"
+    back_to_home: "Back to home"
+    used_media: "Used media"
+    unused_media: "Unused media"
+    no_used_media: "No used media detected."
+    no_unused_media: "No unused media detected."
+    no_analysis: "No analysis results available."
+  home:
+    update_badge: "Update VoidFiles now live!"
+    headline:
+      dein: "Your"
+      smarter_assistent: "smart assistant"
+      fuer_jedes: "for every"
+      video_projekt: "video project"
+    subline: "Save storage space and time: VoidFiles analyzes your Adobe Premiere Pro projects, detects used, unused, and missing media – all at a glance, AI-powered and secure."
+    cta_start: "Get started"
+    cta_how: "How it works"
+    cta_note: "No credit card required – cancel anytime"
+    features_title: "What VoidFiles does for you"
+    features_subline: "VoidFiles is your professional assistant for efficient organization and analysis of your Adobe Premiere Pro projects. Save time, storage space, and nerves – with intelligent technology that gives you full control and overview of your media. Whether freelancer, agency or company: With VoidFiles you work smarter, faster and safer."
+    feature1_title: "Detect used files"
+    feature1_text: "VoidFiles analyzes your project and lists all media files that are actually used in the edit. This way you keep track and can clean up specifically."
+    feature2_title: "Find unused files"
+    feature2_text: "Imported but unused files are automatically detected. This way you can save storage space and keep your projects lean."
+    feature3_title: "Track missing media"
+    feature3_text: "VoidFiles immediately shows you which files are referenced in the project but can no longer be found. This way you avoid nasty surprises during export or collaboration."
+    features_slogan_bold: "Secure, fast and intuitive:"
+    features_slogan: "VoidFiles is the modern solution for everyone who works professionally with Premiere Pro and values clarity and efficiency."
+    how_title: "How it works"
+    how_subline: "In four clear steps from project file to perfect overview – simple, secure and efficient."
+    step1_title: "Upload project file"
+    step1_text: "Select your .prproj file or drag it into the upload field. Your data remains protected."
+    step2_title: "(Optional) Add media list"
+    step2_text: "Add a CSV list to refine the analysis. This is helpful, but not required."
+    step3_title: "Automatic analysis"
+    step3_text: "VoidFiles detects used, unused and missing media – fast, precise and AI-powered."
+    step4_title: "Get results"
+    step4_text: "You receive a clear evaluation and can immediately recognize optimization potential."
+    how_slogan_bold: "Fast. Clear. Efficient."
+    how_slogan: "Project analysis has never been so easy."
+  footer:
+    slogan: "Intelligent analysis of Adobe Premiere Pro projects"
+    tech: "Built with Ruby on Rails, Tailwind CSS and GPT-4."
+  upload:
+    ready_title: "Ready for your first analysis?"
+    error_file_missing: "Please select a .xml file before uploading."
+    form_title: "Upload project file"
+    form_hint: "Drag your .xml file here or click to select"
+    form_placeholder: "Project title (optional)"
+    form_submit: "🚀 Upload"
+    supported_format: "Supported format: .xml"
+  show:
+    title: "Referenced media in the project"
+    intro: "Your media has been successfully detected. You can now check yourself if everything is correct – or let the AI sort used and unused media."
+    hint_reload: "If no media is displayed, please reload the page. The analysis may take a few seconds."
+    no_media: "No media found in the project."
+    ki_start: "Start AI analysis"
