Features-Seite, Preisseite, FAQ, Mehrsprachigkeit und UI-Verbesserungen: neue Seiten, Übersetzungen, konsistenter Header, Roadmap und Vorteile ergänzt

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -36,10 +36,10 @@ de:
     features_slogan: "VoidFiles ist die moderne Lösung für alle, die mit Premiere Pro professionell arbeiten und Wert auf Übersicht und Effizienz legen."
     how_title: "So funktioniert's"
     how_subline: "In vier klaren Schritten von der Projektdatei zur perfekten Übersicht – einfach, sicher und effizient."
-    step1_title: "Projektdatei hochladen"
-    step1_text: "Wähle deine .prproj-Datei aus oder ziehe sie ins Upload-Feld. Deine Daten bleiben geschützt."
-    step2_title: "(Optional) Medienliste ergänzen"
-    step2_text: "Füge eine CSV-Liste hinzu, um die Analyse zu verfeinern. Das ist hilfreich, aber kein Muss."
+    step1_title: "Projekt als XML exportieren"
+    step1_text: "Öffne dein Premiere Pro-Projekt und exportiere es als XML-Datei über 'Datei > Exportieren > Final Cut Pro XML'. Das macht dein Projekt für VoidFiles lesbar."
+    step2_title: "XML-Datei hochladen"
+    step2_text: "Wähle deine .xml-Datei aus oder ziehe sie ins Upload-Feld. Deine Daten bleiben geschützt."
     step3_title: "Automatische Analyse"
     step3_text: "VoidFiles erkennt genutzte, ungenutzte und fehlende Medien – schnell, präzise und KI-gestützt."
     step4_title: "Ergebnis erhalten"
@@ -62,4 +62,96 @@ de:
     intro: "Deine Medien wurden erfolgreich erkannt. Du kannst jetzt selbst testen, ob alles korrekt ist – oder die KI genutzte und ungenutzte Medien sortieren lassen."
     hint_reload: "Sollten keine Medien angezeigt werden, lade die Seite bitte einmal neu. Die Analyse kann wenige Sekunden dauern."
     no_media: "Keine Medien im Projekt gefunden."
-    ki_start: "KI-Analyse starten" 
+    ki_start: "KI-Analyse starten"
+  faq:
+    title: "Häufige Fragen (FAQ)"
+    subtitle: "Alles, was du über VoidFiles wissen musst"
+    what_is_title: "Was ist VoidFiles?"
+    what_is_text: "VoidFiles ist ein smarter Assistent zur Analyse von Adobe Premiere Pro-Projekten. Er erkennt genutzte, ungenutzte und fehlende Mediendateien in deinen .prproj-Projekten – schnell, sicher und KI-gestützt."
+    file_types_title: "Welche Dateitypen kann ich hochladen?"
+    file_types_text: "Aktuell werden .xml-Dateien (exportierte Adobe Premiere Pro-Projekte) unterstützt. Du musst dein Projekt zuerst als XML exportieren."
+    how_upload_title: "Wie funktioniert der Upload?"
+    how_upload_text: "Ziehe deine .xml-Datei einfach in das Upload-Feld oder wähle sie per Klick aus. Nach dem Hochladen wird die Datei analysiert und du erhältst eine Übersicht der verwendeten Medien."
+    security_title: "Sind meine Daten sicher?"
+    security_text: "Ja! Deine Dateien werden vertraulich behandelt und ausschließlich zur Analyse verwendet. Es erfolgt keine Weitergabe an Dritte."
+    pricing_title: "Was kostet VoidFiles?"
+    pricing_text: "VoidFiles ist aktuell kostenlos nutzbar. Zukünftige Premium-Features werden rechtzeitig angekündigt."
+    feedback_title: "Ich habe Feedback oder weitere Fragen!"
+    feedback_text: "Wir freuen uns über dein Feedback! Schreibe uns einfach über das Kontaktformular auf der Startseite oder per E-Mail."
+  pricing:
+    title: "Preise & Pläne"
+    subtitle: "Wähle den Plan, der am besten zu deinen Bedürfnissen passt. Alle Pläne beinhalten unsere Kernfunktionen."
+    free:
+      title: "Kostenlos"
+      price: "€0"
+      period: "/Monat"
+      feature1: "5 Analysen pro Monat"
+      feature2: "Grundlegende Medienanalyse"
+      feature3: "Export als CSV"
+      feature4: "E-Mail-Support"
+      cta: "Jetzt starten"
+    pro:
+      title: "Pro"
+      price: "€19"
+      period: "/Monat"
+      badge: "Beliebt"
+      feature1: "Unbegrenzte Analysen"
+      feature2: "Erweiterte KI-Analyse"
+      feature3: "Prioritäts-Support"
+      feature4: "API-Zugang"
+      feature5: "Team-Funktionen"
+      cta: "Pro starten"
+    enterprise:
+      title: "Enterprise"
+      price: "€99"
+      period: "/Monat"
+      feature1: "Alles aus Pro"
+      feature2: "Dedizierter Support"
+      feature3: "Custom Integration"
+      feature4: "SLA-Garantie"
+      cta: "Kontakt aufnehmen"
+    faq_title: "Häufige Fragen zu den Preisen"
+    faq1:
+      question: "Kann ich jederzeit kündigen?"
+      answer: "Ja, alle Pläne können jederzeit ohne Kündigungsfrist gekündigt werden."
+    faq2:
+      question: "Gibt es eine Testversion?"
+      answer: "Ja, der kostenlose Plan ist bereits eine vollwertige Testversion mit allen Kernfunktionen."
+    faq3:
+      question: "Was passiert bei Überschreitung der Limits?"
+      answer: "Du erhältst eine Benachrichtigung und kannst auf einen höheren Plan upgraden."
+    faq4:
+      question: "Sind die Preise inklusive MwSt?"
+      answer: "Ja, alle angezeigten Preise sind inklusive der gesetzlichen Mehrwertsteuer." 
+  features:
+    title: "Was macht VoidFiles einzigartig?"
+    subtitle: "Die smarte Lösung für Medienmanagement in Premiere Pro – jetzt und in Zukunft."
+    early_access_badge: "Early Access – aktiv in Entwicklung!"
+    early_access_text: "VoidFiles befindet sich in aktiver Entwicklung. Als Early-User profitierst du von schnellen Verbesserungen, neuen Features und exklusiven Vorteilen. Dein Feedback fließt direkt in die Weiterentwicklung ein!"
+    how_title: "Wie funktioniert VoidFiles?"
+    how_step1_title: "Projekt als XML exportieren"
+    how_step1_text: "Exportiere dein Premiere Pro-Projekt als XML-Datei. So kann VoidFiles alle Medienpfade auslesen."
+    how_step2_title: "XML-Datei hochladen"
+    how_step2_text: "Lade die exportierte XML-Datei hoch. Deine Daten bleiben sicher und werden vertraulich behandelt."
+    how_step3_title: "Automatische Analyse"
+    how_step3_text: "VoidFiles analysiert dein Projekt mit KI und erkennt genutzte, ungenutzte und fehlende Medien."
+    how_step4_title: "Ergebnis erhalten"
+    how_step4_text: "Du bekommst eine übersichtliche Auswertung und kannst direkt Optimierungspotenzial erkennen."
+    benefits_title: "Deine Vorteile mit VoidFiles"
+    benefit1_title: "Spare Zeit & Speicherplatz"
+    benefit1_text: "Finde ungenutzte Dateien und räume Projekte in Minuten statt Stunden auf."
+    benefit2_title: "Fehler vermeiden"
+    benefit2_text: "Erkenne fehlende Medien sofort und verhindere böse Überraschungen beim Export."
+    benefit3_title: "KI-gestützte Analyse"
+    benefit3_text: "Profitiere von intelligenter Medienklassifikation und präzisen Ergebnissen."
+    benefit4_title: "Sicher & datenschutzkonform"
+    benefit4_text: "Deine Daten werden vertraulich behandelt und nicht an Dritte weitergegeben."
+    nobrainer_title: "Warum ein No-Brainer?"
+    nobrainer_text: "VoidFiles automatisiert eine der lästigsten Aufgaben im Videoschnitt. Statt stundenlangem Suchen, Sortieren und Kontrollieren erledigst du alles mit wenigen Klicks – sicher, schnell und zuverlässig. Spare Zeit, Nerven und bares Geld!"
+    future_title: "Zukünftige Features (Roadmap)"
+    future1: "Direkter .prproj-Upload (ohne XML-Export)"
+    future2: "Noch intelligentere KI-Auswertung und Medienvorschläge"
+    future3: "Integration mit Cloud-Speichern (Dropbox, Google Drive, etc.)"
+    future4: "Team- und Kollaborationsfunktionen"
+    future5: "Erweiterte Sicherheits- und Datenschutzoptionen"
+    future_note: "Als Early-User kannst du die Entwicklung aktiv mitgestalten und profitierst von exklusiven Vorteilen!" 
