--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,10 +65,10 @@ en:
     features_slogan: "VoidFiles is the modern solution for everyone who works professionally with Premiere Pro and values clarity and efficiency."
     how_title: "How it works"
     how_subline: "In four clear steps from project file to perfect overview – simple, secure and efficient."
-    step1_title: "Upload project file"
-    step1_text: "Select your .prproj file or drag it into the upload field. Your data remains protected."
-    step2_title: "(Optional) Add media list"
-    step2_text: "Add a CSV list to refine the analysis. This is helpful, but not required."
+    step1_title: "Export project as XML"
+    step1_text: "Open your Premiere Pro project and export it as XML via 'File > Export > Final Cut Pro XML'. This makes your project readable for VoidFiles."
+    step2_title: "Upload XML file"
+    step2_text: "Select your .xml file or drag it into the upload field. Your data remains protected."
     step3_title: "Automatic analysis"
     step3_text: "VoidFiles detects used, unused and missing media – fast, precise and AI-powered."
     step4_title: "Get results"
@@ -92,3 +92,95 @@ en:
     hint_reload: "If no media is displayed, please reload the page. The analysis may take a few seconds."
     no_media: "No media found in the project."
     ki_start: "Start AI analysis"
+  faq:
+    title: "Frequently Asked Questions (FAQ)"
+    subtitle: "Everything you need to know about VoidFiles"
+    what_is_title: "What is VoidFiles?"
+    what_is_text: "VoidFiles is a smart assistant for analyzing Adobe Premiere Pro projects. It detects used, unused, and missing media files in your .prproj projects – fast, secure, and AI-powered."
+    file_types_title: "What file types can I upload?"
+    file_types_text: "Currently, .xml files (exported Adobe Premiere Pro projects) are supported. You need to export your project as XML first."
+    how_upload_title: "How does the upload work?"
+    how_upload_text: "Simply drag your .xml file into the upload field or select it by clicking. After uploading, the file will be analyzed and you'll receive an overview of the media used."
+    security_title: "Is my data secure?"
+    security_text: "Yes! Your files are treated confidentially and used exclusively for analysis. There is no sharing with third parties."
+    pricing_title: "What does VoidFiles cost?"
+    pricing_text: "VoidFiles is currently free to use. Future premium features will be announced in advance."
+    feedback_title: "I have feedback or more questions!"
+    feedback_text: "We welcome your feedback! Simply write to us via the contact form on the homepage or by email."
+  pricing:
+    title: "Pricing & Plans"
+    subtitle: "Choose the plan that best fits your needs. All plans include our core features."
+    free:
+      title: "Free"
+      price: "$0"
+      period: "/month"
+      feature1: "5 analyses per month"
+      feature2: "Basic media analysis"
+      feature3: "CSV export"
+      feature4: "Email support"
+      cta: "Get started"
+    pro:
+      title: "Pro"
+      price: "$19"
+      period: "/month"
+      badge: "Popular"
+      feature1: "Unlimited analyses"
+      feature2: "Advanced AI analysis"
+      feature3: "Priority support"
+      feature4: "API access"
+      feature5: "Team features"
+      cta: "Start Pro"
+    enterprise:
+      title: "Enterprise"
+      price: "$99"
+      period: "/month"
+      feature1: "Everything from Pro"
+      feature2: "Dedicated support"
+      feature3: "Custom integration"
+      feature4: "SLA guarantee"
+      cta: "Contact us"
+    faq_title: "Frequently Asked Questions about Pricing"
+    faq1:
+      question: "Can I cancel anytime?"
+      answer: "Yes, all plans can be cancelled at any time without notice period."
+    faq2:
+      question: "Is there a trial version?"
+      answer: "Yes, the free plan is already a full-featured trial with all core functions."
+    faq3:
+      question: "What happens when I exceed the limits?"
+      answer: "You'll receive a notification and can upgrade to a higher plan."
+    faq4:
+      question: "Are prices including VAT?"
+      answer: "Yes, all displayed prices include statutory VAT."
+  features:
+    title: "What makes VoidFiles unique?"
+    subtitle: "The smart solution for media management in Premiere Pro – now and in the future."
+    early_access_badge: "Early Access – actively in development!"
+    early_access_text: "VoidFiles is under active development. As an early user, you benefit from rapid improvements, new features, and exclusive advantages. Your feedback directly shapes the future of the product!"
+    how_title: "How does VoidFiles work?"
+    how_step1_title: "Export project as XML"
+    how_step1_text: "Export your Premiere Pro project as an XML file. This allows VoidFiles to read all media paths."
+    how_step2_title: "Upload XML file"
+    how_step2_text: "Upload the exported XML file. Your data remains safe and is treated confidentially."
+    how_step3_title: "Automatic analysis"
+    how_step3_text: "VoidFiles analyzes your project with AI and detects used, unused, and missing media."
+    how_step4_title: "Get results"
+    how_step4_text: "You receive a clear evaluation and can immediately spot optimization potential."
+    benefits_title: "Your benefits with VoidFiles"
+    benefit1_title: "Save time & storage"
+    benefit1_text: "Find unused files and clean up projects in minutes instead of hours."
+    benefit2_title: "Avoid mistakes"
+    benefit2_text: "Detect missing media instantly and prevent nasty surprises during export."
+    benefit3_title: "AI-powered analysis"
+    benefit3_text: "Benefit from intelligent media classification and precise results."
+    benefit4_title: "Secure & privacy-compliant"
+    benefit4_text: "Your data is treated confidentially and not shared with third parties."
+    nobrainer_title: "Why is it a no-brainer?"
+    nobrainer_text: "VoidFiles automates one of the most tedious tasks in video editing. Instead of hours of searching, sorting, and checking, you do everything with a few clicks – safe, fast, and reliable. Save time, nerves, and money!"
+    future_title: "Upcoming Features (Roadmap)"
+    future1: "Direct .prproj upload (no XML export needed)"
+    future2: "Even smarter AI analysis and media suggestions"
+    future3: "Integration with cloud storage (Dropbox, Google Drive, etc.)"
+    future4: "Team and collaboration features"
+    future5: "Advanced security and privacy options"
+    future_note: "As an early user, you can actively shape the development and benefit from exclusive advantages!"
