--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -36,10 +36,10 @@ es:
     features_slogan: "VoidFiles es la solución moderna para quienes trabajan profesionalmente con Premiere Pro y valoran la claridad y la eficiencia."
     how_title: "Cómo funciona"
     how_subline: "En cuatro pasos claros, del archivo de proyecto a la visión perfecta – simple, seguro y eficiente."
-    step1_title: "Subir archivo de proyecto"
-    step1_text: "Selecciona tu archivo .prproj o arrástralo al campo de carga. Tus datos permanecen protegidos."
-    step2_title: "(Opcional) Añadir lista de medios"
-    step2_text: "Agrega una lista CSV para refinar el análisis. Es útil, pero no obligatorio."
+    step1_title: "Exportar proyecto como XML"
+    step1_text: "Abre tu proyecto de Premiere Pro y expórtalo como XML a través de 'Archivo > Exportar > Final Cut Pro XML'. Esto hace que tu proyecto sea legible para VoidFiles."
+    step2_title: "Subir archivo XML"
+    step2_text: "Selecciona tu archivo .xml o arrástralo al campo de carga. Tus datos permanecen protegidos."
     step3_title: "Análisis automático"
     step3_text: "VoidFiles detecta medios utilizados, no utilizados y faltantes – rápido, preciso y con IA."
     step4_title: "Recibir resultados"
@@ -60,6 +60,98 @@ es:
     hint_reload: "Si no se muestran medios, por favor recarga la página. El análisis puede tardar unos segundos."
     no_media: "No se encontraron medios en el proyecto."
     ki_start: "Iniciar análisis con IA"
+  faq:
+    title: "Preguntas Frecuentes (FAQ)"
+    subtitle: "Todo lo que necesitas saber sobre VoidFiles"
+    what_is_title: "¿Qué es VoidFiles?"
+    what_is_text: "VoidFiles es un asistente inteligente para analizar proyectos de Adobe Premiere Pro. Detecta archivos multimedia utilizados, no utilizados y faltantes en tus proyectos .prproj – rápido, seguro y con IA."
+    file_types_title: "¿Qué tipos de archivos puedo subir?"
+    file_types_text: "Actualmente se soportan archivos .xml (proyectos exportados de Adobe Premiere Pro). Necesitas exportar tu proyecto como XML primero."
+    how_upload_title: "¿Cómo funciona la subida?"
+    how_upload_text: "Simplemente arrastra tu archivo .xml al campo de subida o selecciónalo haciendo clic. Después de subir, el archivo será analizado y recibirás una visión general de los medios utilizados."
+    security_title: "¿Están seguros mis datos?"
+    security_text: "¡Sí! Tus archivos se tratan de forma confidencial y se usan exclusivamente para el análisis. No hay compartición con terceros."
+    pricing_title: "¿Cuánto cuesta VoidFiles?"
+    pricing_text: "VoidFiles es actualmente gratuito. Las futuras funciones premium se anunciarán con anticipación."
+    feedback_title: "¡Tengo comentarios o más preguntas!"
+    feedback_text: "¡Agradecemos tus comentarios! Simplemente escríbenos a través del formulario de contacto en la página principal o por correo electrónico."
+  pricing:
+    title: "Precios y Planes"
+    subtitle: "Elige el plan que mejor se adapte a tus necesidades. Todos los planes incluyen nuestras funciones principales."
+    free:
+      title: "Gratis"
+      price: "€0"
+      period: "/mes"
+      feature1: "5 análisis por mes"
+      feature2: "Análisis básico de medios"
+      feature3: "Exportación CSV"
+      feature4: "Soporte por email"
+      cta: "Comenzar"
+    pro:
+      title: "Pro"
+      price: "€19"
+      period: "/mes"
+      badge: "Popular"
+      feature1: "Análisis ilimitados"
+      feature2: "Análisis IA avanzado"
+      feature3: "Soporte prioritario"
+      feature4: "Acceso API"
+      feature5: "Funciones de equipo"
+      cta: "Comenzar Pro"
+    enterprise:
+      title: "Enterprise"
+      price: "€99"
+      period: "/mes"
+      feature1: "Todo de Pro"
+      feature2: "Soporte dedicado"
+      feature3: "Integración personalizada"
+      feature4: "Garantía SLA"
+      cta: "Contactar"
+    faq_title: "Preguntas Frecuentes sobre Precios"
+    faq1:
+      question: "¿Puedo cancelar en cualquier momento?"
+      answer: "Sí, todos los planes se pueden cancelar en cualquier momento sin período de preaviso."
+    faq2:
+      question: "¿Hay una versión de prueba?"
+      answer: "Sí, el plan gratuito ya es una prueba completa con todas las funciones principales."
+    faq3:
+      question: "¿Qué pasa cuando excedo los límites?"
+      answer: "Recibirás una notificación y podrás actualizar a un plan superior."
+    faq4:
+      question: "¿Los precios incluyen IVA?"
+      answer: "Sí, todos los precios mostrados incluyen el IVA legal."
+  features:
+    title: "¿Qué hace único a VoidFiles?"
+    subtitle: "La solución inteligente para la gestión de medios en Premiere Pro – ahora y en el futuro."
+    early_access_badge: "Acceso anticipado – ¡en desarrollo activo!"
+    early_access_text: "VoidFiles está en desarrollo activo. Como usuario temprano, te beneficias de mejoras rápidas, nuevas funciones y ventajas exclusivas. ¡Tus comentarios influyen directamente en el futuro del producto!"
+    how_title: "¿Cómo funciona VoidFiles?"
+    how_step1_title: "Exportar proyecto como XML"
+    how_step1_text: "Exporta tu proyecto de Premiere Pro como archivo XML. Así VoidFiles puede leer todas las rutas de medios."
+    how_step2_title: "Subir archivo XML"
+    how_step2_text: "Sube el archivo XML exportado. Tus datos permanecen seguros y se tratan de forma confidencial."
+    how_step3_title: "Análisis automático"
+    how_step3_text: "VoidFiles analiza tu proyecto con IA y detecta medios utilizados, no utilizados y faltantes."
+    how_step4_title: "Recibir resultados"
+    how_step4_text: "Recibes una evaluación clara y puedes reconocer inmediatamente el potencial de optimización."
+    benefits_title: "Tus ventajas con VoidFiles"
+    benefit1_title: "Ahorra tiempo y espacio"
+    benefit1_text: "Encuentra archivos no utilizados y limpia proyectos en minutos en lugar de horas."
+    benefit2_title: "Evita errores"
+    benefit2_text: "Detecta medios faltantes al instante y evita sorpresas desagradables al exportar."
+    benefit3_title: "Análisis impulsado por IA"
+    benefit3_text: "Benefíciate de la clasificación inteligente de medios y resultados precisos."
+    benefit4_title: "Seguro y conforme a la privacidad"
+    benefit4_text: "Tus datos se tratan de forma confidencial y no se comparten con terceros."
+    nobrainer_title: "¿Por qué es un no-brainer?"
+    nobrainer_text: "VoidFiles automatiza una de las tareas más tediosas en la edición de vídeo. En lugar de horas buscando, ordenando y comprobando, lo haces todo con unos pocos clics – seguro, rápido y fiable. ¡Ahorra tiempo, nervios y dinero!"
+    future_title: "Próximas funciones (Roadmap)"
+    future1: "Subida directa de .prproj (sin exportar XML)"
+    future2: "Análisis IA aún más inteligente y sugerencias de medios"
+    future3: "Integración con almacenamiento en la nube (Dropbox, Google Drive, etc.)"
+    future4: "Funciones de equipo y colaboración"
+    future5: "Opciones avanzadas de seguridad y privacidad"
+    future_note: "¡Como usuario temprano puedes influir activamente en el desarrollo y beneficiarte de ventajas exclusivas!"
   footer:
     slogan: "Análisis inteligente de proyectos de Adobe Premiere Pro"
     tech: "Desarrollado con Ruby on Rails, Tailwind CSS y GPT-4." 
