--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -36,10 +36,10 @@ fr:
     features_slogan: "VoidFiles est la solution moderne pour tous ceux qui travaillent professionnellement avec Premiere Pro et attachent de l'importance à la clarté et à l'efficacité."
     how_title: "Comment ça marche"
     how_subline: "En quatre étapes claires, du fichier projet à la vue parfaite – simple, sûr et efficace."
-    step1_title: "Télécharger le fichier projet"
-    step1_text: "Sélectionnez votre fichier .prproj ou faites-le glisser dans le champ de téléchargement. Vos données restent protégées."
-    step2_title: "(Optionnel) Ajouter une liste de médias"
-    step2_text: "Ajoutez une liste CSV pour affiner l'analyse. C'est utile, mais pas obligatoire."
+    step1_title: "Exporter le projet en XML"
+    step1_text: "Ouvrez votre projet Premiere Pro et exportez-le en XML via 'Fichier > Exporter > Final Cut Pro XML'. Cela rend votre projet lisible pour VoidFiles."
+    step2_title: "Télécharger le fichier XML"
+    step2_text: "Sélectionnez votre fichier .xml ou faites-le glisser dans le champ de téléchargement. Vos données restent protégées."
     step3_title: "Analyse automatique"
     step3_text: "VoidFiles détecte les médias utilisés, inutilisés et manquants – rapidement, précisément et avec IA."
     step4_title: "Recevoir les résultats"
@@ -60,6 +60,98 @@ fr:
     hint_reload: "Si aucun média n'est affiché, veuillez recharger la page. L'analyse peut prendre quelques secondes."
     no_media: "Aucun média trouvé dans le projet."
     ki_start: "Démarrer l'analyse IA"
+  faq:
+    title: "Questions Fréquemment Posées (FAQ)"
+    subtitle: "Tout ce que vous devez savoir sur VoidFiles"
+    what_is_title: "Qu'est-ce que VoidFiles ?"
+    what_is_text: "VoidFiles est un assistant intelligent pour analyser les projets Adobe Premiere Pro. Il détecte les fichiers multimédias utilisés, inutilisés et manquants dans vos projets .prproj – rapidement, en toute sécurité et avec IA."
+    file_types_title: "Quels types de fichiers puis-je télécharger ?"
+    file_types_text: "Actuellement, les fichiers .xml (projets Adobe Premiere Pro exportés) sont pris en charge. Vous devez d'abord exporter votre projet en XML."
+    how_upload_title: "Comment fonctionne le téléchargement ?"
+    how_upload_text: "Faites simplement glisser votre fichier .xml dans le champ de téléchargement ou sélectionnez-le en cliquant. Après le téléchargement, le fichier sera analysé et vous recevrez un aperçu des médias utilisés."
+    security_title: "Mes données sont-elles sécurisées ?"
+    security_text: "Oui ! Vos fichiers sont traités confidentiellement et utilisés exclusivement pour l'analyse. Il n'y a aucun partage avec des tiers."
+    pricing_title: "Combien coûte VoidFiles ?"
+    pricing_text: "VoidFiles est actuellement gratuit. Les futures fonctionnalités premium seront annoncées à l'avance."
+    feedback_title: "J'ai des commentaires ou plus de questions !"
+    feedback_text: "Nous accueillons vos commentaires ! Écrivez-nous simplement via le formulaire de contact sur la page d'accueil ou par e-mail."
+  pricing:
+    title: "Tarifs et Plans"
+    subtitle: "Choisissez le plan qui correspond le mieux à vos besoins. Tous les plans incluent nos fonctionnalités principales."
+    free:
+      title: "Gratuit"
+      price: "€0"
+      period: "/mois"
+      feature1: "5 analyses par mois"
+      feature2: "Analyse de médias de base"
+      feature3: "Export CSV"
+      feature4: "Support par email"
+      cta: "Commencer"
+    pro:
+      title: "Pro"
+      price: "€19"
+      period: "/mois"
+      badge: "Populaire"
+      feature1: "Analyses illimitées"
+      feature2: "Analyse IA avancée"
+      feature3: "Support prioritaire"
+      feature4: "Accès API"
+      feature5: "Fonctionnalités d'équipe"
+      cta: "Commencer Pro"
+    enterprise:
+      title: "Enterprise"
+      price: "€99"
+      period: "/mois"
+      feature1: "Tout de Pro"
+      feature2: "Support dédié"
+      feature3: "Intégration personnalisée"
+      feature4: "Garantie SLA"
+      cta: "Nous contacter"
+    faq_title: "Questions Fréquemment Posées sur les Tarifs"
+    faq1:
+      question: "Puis-je annuler à tout moment ?"
+      answer: "Oui, tous les plans peuvent être annulés à tout moment sans période de préavis."
+    faq2:
+      question: "Y a-t-il une version d'essai ?"
+      answer: "Oui, le plan gratuit est déjà un essai complet avec toutes les fonctionnalités principales."
+    faq3:
+      question: "Que se passe-t-il quand je dépasse les limites ?"
+      answer: "Vous recevrez une notification et pourrez passer à un plan supérieur."
+    faq4:
+      question: "Les prix incluent-ils la TVA ?"
+      answer: "Oui, tous les prix affichés incluent la TVA légale."
   footer:
     slogan: "Analyse intelligente des projets Adobe Premiere Pro"
-    tech: "Développé avec Ruby on Rails, Tailwind CSS et GPT-4." 
+    tech: "Développé avec Ruby on Rails, Tailwind CSS et GPT-4."
+  features:
+    title: "Qu'est-ce qui rend VoidFiles unique ?"
+    subtitle: "La solution intelligente pour la gestion des médias dans Premiere Pro – aujourd'hui et demain."
+    early_access_badge: "Accès anticipé – en développement actif !"
+    early_access_text: "VoidFiles est en développement actif. En tant qu'utilisateur précoce, vous bénéficiez d'améliorations rapides, de nouvelles fonctionnalités et d'avantages exclusifs. Vos retours influencent directement l'avenir du produit !"
+    how_title: "Comment fonctionne VoidFiles ?"
+    how_step1_title: "Exporter le projet en XML"
+    how_step1_text: "Exportez votre projet Premiere Pro au format XML. Cela permet à VoidFiles de lire tous les chemins des médias."
+    how_step2_title: "Télécharger le fichier XML"
+    how_step2_text: "Téléchargez le fichier XML exporté. Vos données restent en sécurité et sont traitées de manière confidentielle."
+    how_step3_title: "Analyse automatique"
+    how_step3_text: "VoidFiles analyse votre projet avec l'IA et détecte les médias utilisés, inutilisés et manquants."
+    how_step4_title: "Recevoir les résultats"
+    how_step4_text: "Vous recevez une évaluation claire et pouvez immédiatement repérer le potentiel d'optimisation."
+    benefits_title: "Vos avantages avec VoidFiles"
+    benefit1_title: "Gagnez du temps et de l'espace"
+    benefit1_text: "Trouvez les fichiers inutilisés et nettoyez vos projets en quelques minutes au lieu d'heures."
+    benefit2_title: "Évitez les erreurs"
+    benefit2_text: "Détectez immédiatement les médias manquants et évitez les mauvaises surprises à l'export."
+    benefit3_title: "Analyse assistée par IA"
+    benefit3_text: "Bénéficiez d'une classification intelligente des médias et de résultats précis."
+    benefit4_title: "Sécurisé et conforme à la confidentialité"
+    benefit4_text: "Vos données sont traitées de manière confidentielle et ne sont pas partagées avec des tiers."
+    nobrainer_title: "Pourquoi est-ce une évidence ?"
+    nobrainer_text: "VoidFiles automatise l'une des tâches les plus fastidieuses du montage vidéo. Au lieu de passer des heures à chercher, trier et vérifier, tout se fait en quelques clics – sûr, rapide et fiable. Gagnez du temps, des nerfs et de l'argent !"
+    future_title: "Fonctionnalités à venir (Roadmap)"
+    future1: "Téléversement direct de .prproj (sans export XML)"
+    future2: "Analyse IA encore plus intelligente et suggestions de médias"
+    future3: "Intégration avec le stockage cloud (Dropbox, Google Drive, etc.)"
+    future4: "Fonctionnalités d'équipe et de collaboration"
+    future5: "Options de sécurité et de confidentialité avancées"
+    future_note: "En tant qu'utilisateur précoce, vous pouvez façonner activement le développement et bénéficier d'avantages exclusifs !" 
